# nanobot-mini

./: .env.example  .gitignore  AGENTS.md  CLAUDE.md  LICENSE  PROJECT_ANALYSIS.md  README.md  TODO.md  models.toml  pyproject.toml
bananabot/: __init__.py
bananabot/app/: __init__.py  bootstrap.py  cli.py  cli_handlers.py  cli_lists.py  cli_render.py  cli_state.py  contracts.py  service.py
bananabot/infra/: __init__.py  config.py  logging.py  paths.py  runtime_state_store.py
bananabot/llm/: __init__.py  client.py  errors.py  factory.py  registry.py  smoke.py  types.py
bananabot/memory/: __init__.py  compact_service.py  context_sources.py  memory_store.py  session_store.py  thread_store.py  working_memory.py
bananabot/runtime/: __init__.py  context_builder.py  context_engine.py  coordinator.py  events.py  models.py  prompts.py  runner.py
bananabot/tools/: __init__.py  base.py  exec.py  registry.py  specs.py
docs/: 00-仓库总览.md  app 模块设计.md  infra 模块设计.md  llm 模块设计.md  memory 模块设计.md  runtime 模块设计.md  tools 模块设计.md  上下文示例.jsonl  测试与状态存储设计.md  记忆与上下文压缩系统设计.md  记忆与会话系统.md  项目结构重构方案.md
nanobot_mini/: __init__.py  __main__.py  config.py  context.py  llm.py  memory.py  runner.py  session.py  tools.py  types.py
nanobot_mini/app/: __init__.py  (+3 more)
refactor/: 00-overview.md  01-architecture-plan.md  02-runtime-migration-plan.md  03-code-guide.md  04-code-style.md  05-work-items.md  06-agent-roles.md  07-shared-contracts.md  README.md
tests/: support.py  test_llm_provider_convergence.py  test_runtime_contracts.py  test_runtime_state_store.py  test_stage1_refactor.py
(+22 files in other folders)
