[build-system]
requires = ["hatchling>=1.27.0"]
build-backend = "hatchling.build"

[project]
name = "nanobot-mini"
version = "0.1.0"
description = "nanobot 最小复刻版"
requires-python = ">=3.11"
dependencies = [
    "httpx>=0.25.0",
    "python-dotenv>=1.0.0",
    "rich>=13.0.0",
    "textual>=0.86.0",
]

[project.scripts]
nanobot-mini = "nanobot_mini.__main__:main"

[tool.uv]
package = true
