[build-system]
requires = ["hatchling>=1.27.0"]
build-backend = "hatchling.build"

[project]
name = "bananabot"
version = "0.1.0"
description = "bananabot AI 助手"
requires-python = ">=3.11"
dependencies = [
    "httpx>=0.25.0",
    "python-dotenv>=1.0.0",
    "rich>=13.0.0",
    "textual>=0.86.0",
]

[project.scripts]
bananabot = "bananabot.__main__:main"

[tool.uv]
package = true
